Updated css properties. Updated logo image on mobile. Footer fix update.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,7 +82,7 @@ a:link, a:visited {
     width: 100%;
     z-index: 999;
     padding-bottom: 20px;
-    transition: background-color 200ms linear;
+    transition: all 0.2s ease-out;
     background-image: url("../../images/header.png");
     background-repeat:no-repeat;
     background-size: 100% 100%;
@@ -171,7 +171,7 @@ a:link, a:visited {
         margin: 1em;
         color: #fff;
         z-index: 998;
-        background-color: #222;
+        background-color: none;
         padding: 5px 10px 2px 10px;
     }
     .sidenav {
@@ -296,6 +296,9 @@ a:link, a:visited {
 .logo img, .index-logo img{
     width: 100%;
 }
+.logo-sp {
+    display: none;
+}
 .nav>li>a{
     padding: 0;
 }
@@ -303,6 +306,12 @@ a:link, a:visited {
     .logo {
         max-width: 200px;
         padding: 15px 0 0 20px;
+    }
+    .logo-sp {
+	    display: block;
+    }
+    .logo-pc {
+	    display: none;
     }
 }
 
@@ -602,6 +611,9 @@ a:link, a:visited {
     padding: 50px 0 50px 0;
     position: relative;
 }
+.about h3{
+	margin-top: 0;
+}
 @media screen and (max-width: 993px) {
     .about {
         padding: 30px 0;
@@ -638,7 +650,7 @@ a:link, a:visited {
     width: 50%;
     box-sizing: border-box;
     background: #222;
-    padding: 110px 15% 0 30px;
+    padding: 50px 15% 0 30px;
     float: right;
 }
 .prod-col-right > div{
@@ -833,7 +845,7 @@ a:link, a:visited {
     color: #fff;
     font-size: .5em;
     letter-spacing: 1px;
-    opacity: 1;
+    opacity: 0;
 }
 
 .effect-ming {
@@ -894,11 +906,11 @@ a:link, a:visited {
 /*In active state ming effect*/
 .prod-image.active figcaption::before{
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border: none;
+    top: 20px;
+    right: 20px;
+    bottom: 20px;
+    left: 20px;
+    border: 3px solid #24579d;
     box-shadow: 0 0 0 30px rgba(255,255,255,0.2);
     content: '';
     opacity: 1;
@@ -1000,6 +1012,9 @@ a:link, a:visited {
 .service-area {
     padding: 50px 0;
     position: relative;
+}
+.service-area h3{
+	margin-top: 0;
 }
 @media screen and (max-width: 993px) {
     .service-area {
@@ -1155,16 +1170,15 @@ footer .col-center p{
 footer#footer{
     position: relative;
 }
-#footer:before{
+#footer:before {
     content: " ";
-    background-image: url("../../images/footer.png");
+    background-image: url(../../images/footer.png);
     position: absolute;
-    height:230px;
+    height: 160px;
     width: 100%;
-    top: -170px;
-}
-#footer .row{
-    margin-top: 2em;
+    top: -120px;
+    background-size: 110% 100%;
+    background-repeat: no-repeat;
 }
 #sitemap-links{
 	font-size: 1em;
